# hercules

./: README.md  repro_paper.sh
code/hercules/: Makefile  Makefile.am  Makefile.in  README  config.status
code/hercules/autom4te.cache/: requests  traces.1
code/hercules/include/: hercules_file_buffer_manager.h  hercules_file_loaders.h  hercules_index.h  hercules_node.h  hercules_query_engine.h  sax.h
code/hercules/src/: calc_utils.c  hercules.c  hercules_file_buffer.c  hercules_file_buffer_manager.c  hercules_file_loaders.c  hercules_index.c  hercules_node.c  hercules_node_split.c  hercules_query_engine.c  sax.c
code/hercules/src/.deps/: bin_hercules-hercules.Po  lib_libhercules_a-calc_utils.Po  lib_libhercules_a-hercules_file_buffer.Po  lib_libhercules_a-hercules_file_buffer_manager.Po  lib_libhercules_a-hercules_file_loaders.Po  lib_libhercules_a-hercules_index.Po  lib_libhercules_a-hercules_node.Po  lib_libhercules_a-hercules_node_split.Po  lib_libhercules_a-hercules_query_engine.Po  lib_libhercules_a-pqueue.Po  lib_libhercules_a-sax.Po  lib_libhercules_a-ts.Po
code/paris/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  compare.R  config.h  config.status  configure  configure.ac  export.sh  globals.h
code/paris/ParGIS/: ParGIS.cu  ParGIS.h  hello.cpp  makefile
code/paris/autom4te.cache/: output.0  requests  traces.0  traces.1
code/paris/include/: ads.h  sing.h
code/paris/include/ads/: DTWfunction.h  inmemory_index_engine.h  inmemory_query_engine.h  inmemory_topk_engine.h  isax_file_loaders.h  isax_first_buffer_layer.h  isax_index.h  isax_node.h  isax_node_buffer.h  isax_node_split.h  isax_query_engine.h  parallel_index_engine.h  parallel_inmemory_query_engine.h  parallel_query_engine.h  pqueue.h
code/paris/include/ads/sax/: sax.h  sax_breakpoints.h  ts.h
code/paris/src/ads/: DTWfunction.c  inmemory_index_engine.c  inmemory_query_engine.c  inmemory_topk_engine.c  isax_file_loaders.c  isax_first_buffer_layer.c  isax_index.c  isax_node.c  isax_node_buffer.c  isax_node_split.c  isax_query_engine.c  parallel_index_engine.c  parallel_inmemory_query_engine.c  parallel_query_engine.c  pqueue.c
code/paris/src/ads/.deps/: lib_libads_a-DTWfunction.Po  lib_libads_a-inmemory_index_engine.Po  lib_libads_a-inmemory_query_engine.Po  lib_libads_a-inmemory_topk_engine.Po  lib_libads_a-isax_index.Po  (+12 more)
code/paris/src/utils/: ads-server.c  ads.c  paris.c  sing.cpp
code/paris/website/: index.html
code/paris/website/css/: style.css
code/paris/website/output/: log.html  output.xml  report.html
code/pscan/: Makefile  Makefile.am  Makefile.in  config.status  globals.h
code/pscan/autom4te.cache/: requests  traces.0
code/pscan/include/: parallel_scan_utils.h  parallel_scan_utils.h~  ts.h
code/pscan/src/: parallel_scan.c  parallel_scan_utils.c  parallel_scan_utils.c.new  ts.c
code/pscan/src/.deps/: bin_pscan-parallel_scan.Po  lib_libpscan_a-parallel_scan_utils.Po  lib_libpscan_a-ts.Po
(+99 files in other folders)
